# hailstack

./: AI.md  Apptainer.def  CONTRIBUTING.md  README.md  bundles.toml  example-config.toml  pyproject.toml
.docs/hailstack/: addendum.md  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md  phase7.md  prompt.md  spec.md
.github/workflows/: ci.yml  release.yml
ansible/: install.yml
packer/: hailstack.pkr.hcl
packer/scripts/: base.sh
packer/scripts/ubuntu/: gnomad.sh  hadoop.sh  hail.sh  jupyter.sh  netdata.sh  packages.sh  spark.sh  uv.sh
src/hailstack/: __init__.py  errors.py  py.typed  runtime_paths.py  version.py
src/hailstack/ansible/: __init__.py  runner.py
src/hailstack/cli/: __init__.py  main.py
src/hailstack/config/: __init__.py  compatibility.py  parser.py  schema.py  validator.py
src/hailstack/packer/: __init__.py  builder.py
src/hailstack/pulumi/: __init__.py  cloud_init.py  resources.py  stack.py
src/hailstack/ssh/: __init__.py  health.py
tests/: conftest.py  test_apptainer_definition.py  test_developer_docs.py
tests/ansible/: test_runner.py
tests/cli/: test_bundle_validation.py  test_main.py
tests/config/: test_compatibility.py  test_parser.py  test_schema.py  test_validator.py
tests/integration/: test_e2e_skeleton.py  test_packer_scripts.py  test_pulumi_lifecycle.py
tests/packer/: test_builder.py
tests/pulumi/: test_cloud_init.py  test_resources.py  test_stack.py
tests/ssh/: test_health.py
tests/storage/: test_rollout.py
tests/workflows/: test_ci_workflow.py  test_release_workflow.py
(+18 files in other folders)
